[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
# rust-version = "1.65"
authors = ["Quang Nguyen <quangkeu95@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/quangkeu95/mev-rs"
repository = "https://github.com/quangkeu95/mev-rs"

[workspace.dependencies]
# tracing
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# tokio and async 
tokio = { version = "1.32.0", features = ["full"]}
futures = "0.3.28"

# jsonrpc
jsonrpsee = { version = "0.20" }
jsonrpsee-core = { version = "0.20" }
jsonrpsee-types = { version = "0.20" }

# serde
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }

# alloy
alloy-primitives = { version = "0.4.0" }

# ethers
ethers = { version = "2.0" }

# misc
async-trait = "0.1.73"
anyhow = "1.0.75"
derive_more = "0.99.17"
thiserror = "1.0.49"
strum = { version = "0.25", features = ["derive"] }
lazy_static = "1.4.0"